--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -24,11 +24,11 @@
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
     <PackageReference Include="PixiEditor.ColorPicker" Version="3.4.2" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.9" />
-    <PackageReference Include="System.Drawing.Common" Version="9.0.6" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.8" />
     <PackageReference Include="WPF-UI" Version="4.0.3" />
     <PackageReference Include="WPF-UI.DependencyInjection" Version="4.0.3" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0 " />
   </ItemGroup>
 
@@ -83,6 +83,11 @@
     <Resource Include="Assets\Icons\Honors.png" />
     <Resource Include="Assets\Icons\World.png" />
     <Resource Include="Assets\Icons\Terrain.png" />
+    <Resource Include="Assets\Icons\ticket.png" />
+    <Resource Include="Assets\Icons\Lord.png" />
+    <Resource Include="Assets\Icons\FolderIcon.png" />
+    <Resource Include="Assets\Icons\AboutIcon.png" />
+    <Resource Include="Assets\Icons\PersonalizationIcon.png" />
     <Resource Include="Views\Pages\Settings\AboutIcon.png" />
     <Resource Include="Views\Pages\Settings\FolderPathIcon.png" />
     <Resource Include="Views\Pages\Settings\PaintPaletteIcon.png" />
