Add localization for patch notes and update UI
Introduced German and French resource files for patch notes and extended translation resources for patch modification types. Refactored PatchNotesViewModel and related dialogs to support culture-specific loading and localization via IStringLocalizer. Updated PatchNotesDialog UI to display new modification categories and improved localization handling throughout settings and about pages.

--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -135,6 +135,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>PatchNotes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Resources\PatchNotes.de-DE.resx">
+      <DependentUpon>PatchNotes.resx</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\PatchNotes.fr-FR.resx">
+      <DependentUpon>PatchNotes.resx</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\Texts.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Texts.Designer.cs</LastGenOutput>
