--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -41,6 +41,8 @@
     <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
     <PackageReference Include="PixiEditor.ColorPicker" Version="3.4.2" />
     <PackageReference Include="Sentry" Version="5.16.0" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.9" />
     <PackageReference Include="Velopack" Version="0.0.1298" />
